--- a/src/scripts/3rd-party/jquery/ui/jquery-ui.theme.css
+++ b/src/scripts/3rd-party/jquery/ui/jquery-ui.theme.css
@@ -190,7 +190,8 @@ a.ui-button:active,
 ----------------------------------*/
 
 /* states and images */
-.ui-icon {
+/* these are also in jquery-ui.css. Commenting to save space  */
+/* .ui-icon {
 	width: 16px;
 	height: 16px;
 }
@@ -221,7 +222,7 @@ a.ui-button:active,
 }
 .ui-button .ui-icon {
 	background-image: url("images/ui-icons_777777_256x240.png");
-}
+} */
 
 /* positioning */
 .ui-icon-blank { background-position: 16px 16px; }
