Remove unsupported Layout from Group and Matrix

--- a/src/stylesheets/ui/user/UserUIStyleSheet.less
+++ b/src/stylesheets/ui/user/UserUIStyleSheet.less
@@ -408,6 +408,9 @@
     #DisplayRulesSelector {
         top: 2.8em;
         left: 0.5em;
+        &.NoLayout {
+            top: 0.7em;
+        }
     }
     #HasOther {
         top: 4.9em;
