Update publish dialog with new options to do it

--- a/src/stylesheets/editor/SurveyEditorStyleSheet.less
+++ b/src/stylesheets/editor/SurveyEditorStyleSheet.less
@@ -656,6 +656,13 @@
 	clear: both;
 }
 
+.PublishOption {
+    background-color: #eee;
+    font-weight: bold;
+    border-radius: 10px;
+    padding: 5px 10px;
+    margin-right: 10px;
+}
 .PublishContainer {
 	margin: auto;
 	width: 620px;
