Fix styles for some layouts in Matrix element

--- a/src/stylesheets/editor/SurveyEditorStyleSheet.less
+++ b/src/stylesheets/editor/SurveyEditorStyleSheet.less
@@ -135,11 +135,11 @@
             }
         }
         .ItemContainer.Right {
-            .UIElement {
+            > .UIElement {
                 float: left;
                 width: 70%;
             }
-            .LabelContainer {
+            > .LabelContainer {
                 float: left;
                 width: 25%;
             }
@@ -157,7 +157,7 @@
             }
         }
         .ItemContainer.NoLabel {
-            .UIElement {
+            > .UIElement {
                 display: block;
             }
             > .LabelContainer {
@@ -165,7 +165,7 @@
             }
         }
         .ItemContainer.Bottom {
-            .UIElement {
+            > .UIElement {
                 float: none;
             }
             > .LabelContainer {
@@ -173,11 +173,11 @@
             }
         }
         .ItemContainer.Left {
-            .UIElement {
+            > .UIElement {
                 float: right;
                 width: 25%;
             }
-            .LabelContainer {
+            > .LabelContainer {
                 float: right;
                 width: 70%;
             }
