Remove survey title presentation setting

--- a/src/stylesheets/ui/user/UserUIStyleSheet.less
+++ b/src/stylesheets/ui/user/UserUIStyleSheet.less
@@ -21,23 +21,39 @@
 }
 
 #TitleAndMessagesPane {
-    #SurveyTitle {
-        top: 20px;
-        left: 35px;
-    }
     #SurveyIntro {
-        top: 3.5em;
-        left: 35px;
+        > .Label {
+            float: none;
+            display: block;
+            width: 675px;
+            height: auto;
+            margin-bottom: 5px;
+        }
+        top: 0.2em;
+        left: 45px;
         .ORInput {
+            float: none;
+            display: block;
+            width: 675px;
             .EditorArea {
                 height: 100px;
             }
         }
     }
     #SurveyClosing {
-        top: 13.4em;
-        left: 35px;
+        > .Label {
+            float: none;
+            display: block;
+            width: 675px;
+            height: auto;
+            margin-bottom: 5px;
+        }
+        top: 11.8em;
+        left: 45px;
         .ORInput {
+            float: none;
+            display: block;
+            width: 675px;
             .EditorArea {
                 height: 80px;
             }
